adds @jsonIgnore to tables that were causing issues when accessing /users